# glia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
code/: CMakeLists.txt  glia_base.hxx  glia_image.hxx  np_helpers.hxx  pyglia.cxx  pyglia.hxx
code/alg/: geometry.hxx  nn.hxx
code/gadget/: gadgets.hxx  main_eval_init_seg.cxx  main_eval_ri.cxx  main_eval_ri_threshold.cxx  main_eval_vi.cxx  main_overlay_image.cxx  main_pre_merge.cxx  main_watershed.cxx  test_convert.cxx
code/hmt/: hmt_util.hxx  main_analyze_watershed_threshold.cxx  main_bc_feat.cxx  main_merge_order_pb.cxx  tree_segment.hxx
code/type/: feat.hxx  neighbor.hxx  point.hxx
code/util/: image.hxx  image_stats.hxx  linalg.hxx  struct.hxx  struct_merge.hxx
python/: .gitignore  demo.py  feat_extr.py  setup.py  test_conversions.py  utils.py
python/glia/: __contours_around_labels.cpp  __contours_around_labels.pyx  __count_pairs.cpp  __count_pairs.pyx  __pairwise_pixel_values.cpp  __pairwise_pixel_values.pyx  _commands.py  _utils.py  contours.py  glia.py  stats.py  test_ldnn.py  train_ldnn.py
python/tests/: feat_extr.py  test_conversions.py
src/: CMakeLists.txt  glia_base.hxx  np_helpers.hxx  pyglia.cxx  pyglia.hxx  setup.py  setup.py.in  shogun_helpers.hxx
src/alg/: geometry.hxx  rf.hxx
src/gadget/: main_pre_merge.cxx  main_watershed.cxx  test_convert.cxx
src/glia/: setup.py  utils.py
src/hmt/: bc_feat.cxx  bc_feat.hxx  hmt_util.hxx  main_bc_feat.cxx  main_bc_label_ri.cxx  main_label_ri.cxx  main_merge_order_bc.cxx  main_merge_order_pb.cxx  main_pre_merge.cxx  main_sc_feat.cxx  main_segment_ccm.cxx  main_train_rf.cxx  main_watershed.cxx  sc_feat.hxx
src/ml/rf/: main_train_rf.cxx  test_train_sg_rf.cxx
src/type/: feat.cxx  feat.hxx  point.hxx  region.hxx  region_map.hxx
src/util/: image.hxx  image_stats.hxx  struct.hxx  struct_merge.hxx  struct_merge_bc.hxx  text_io.hxx
utils/: default.yaml  feat_extr.py  loader.py  params.py  pascal.py  pascal_voc_loader.py  pipe_feat_extr.py  test.py  test_rf.py  train.py  utils.py
utils/test/: test_rf.py  test_slic_pb.py
